objects/Interaction__c.object
<CustomObject>
    <description>Historical Interactions migrated from Admin123.</description>
    <fields>
        <fullName>Admin_Interaction_ID__c</fullName>
        <label>Admin Interaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <label>﻿Agent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Label</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agent Interactions</relationshipLabel>
        <relationshipName>Interactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_Agent_ID__c</fullName>
        <label>Member Agent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Agent_Label__c</fullName>
        <label>Member Agent Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Phone__c</fullName>
        <label>Member Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Member_State__c</fullName>
        <label>Member State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <label>Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Active_Date__c</fullName>
        <label>Product Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Created_Date__c</fullName>
        <label>Product Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Inactive_Date__c</fullName>
        <label>Product Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Label__c</fullName>
        <label>Product Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Code__c</fullName>
        <label>Reference Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Date__c</fullName>
        <label>Reference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Agent_ID__c</fullName>
        <label>User Agent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Agent_Label__c</fullName>
        <label>User Agent Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Interaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <recordTypes>
        <fullName>Agent_Interaction</fullName>
        <active>true</active>
        <label>Agent Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Interaction</fullName>
        <active>true</active>
        <label>Member Interaction</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>